--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -13,7 +13,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  extract_branch_name:
+  prepare:
+    name: "Prepare"
     runs-on: ubuntu-latest
     outputs:
       branch: ${{ steps.extract_branch.outputs.branch }}
@@ -24,16 +25,17 @@ jobs:
         id: extract_branch
 
   build:
+    name: "Build and push"
     uses: ./.github/workflows/build.yml
-    needs: [extract_branch_name]
+    needs: [prepare]
     with:
       DOCKER_REPO: nuvladev
-      DOCKER_TAG: ${{ needs.extract_branch_name.outputs.branch }}
+      DOCKER_TAG: ${{ needs.prepare.outputs.branch }}
     secrets: inherit
 
   notify:
     if: always()
-    name: Post Workflow Status To Slack
+    name: "Notify Slack"
     needs: [build]
     runs-on: ubuntu-latest
     steps:
