--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,7 @@ jobs:
     name: "Build and push"
     uses: ./.github/workflows/build.yml
     needs: [ trigger-release ]
+    if: needs.trigger-release.outputs.release_created
     with:
       DOCKER_REPO: nuvla
       DOCKER_TAG: ${{ needs.trigger-release.outputs.tag_name }}
