--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -19,24 +19,21 @@ jobs:
       branch: ${{ steps.prepare-step.outputs.branch }}
       snapshot: ${{ steps.prepare-step.outputs.snapshot }}
     steps:
+      - uses: actions/checkout@v4
+        with:
+          # Disabling shallow clone is recommended for improving relevancy of reporting for sonar
+          fetch-depth: 0
       - name: Extract branch name and substitute slashes
         shell: bash
         working-directory: code
         run: |
           echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" | tr '/' '-' >> $GITHUB_OUTPUT
-          echo "## Checking if string ends with the suffix"
-          if [[ "$(lein project-version)" == *"${SNAPSHOT}" ]]; then
-            echo "snapshot=true" >> $GITHUB_ENV
-          else
-            echo "snapshot=false" >> $GITHUB_ENV
-          fi
         id: prepare-step
 
   build:
     name: "Build and push"
     uses: ./.github/workflows/build.yml
     needs: [prepare]
-    if: ${{ needs.prepare.outputs.snapshot }}
     with:
       DOCKER_REPO: nuvladev
       DOCKER_TAG: ${{ needs.prepare.outputs.branch }}
