ci(github-action): Do not push to clojars from dev workflow when not snapshot

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,9 @@ on:
       DOCKER_TAG:
         required: true
         type: string
+      SNAPSHOT:
+        required: false
+        type: boolean
 
 jobs:
   build:
