--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,7 @@ jobs:
     with:
       DOCKER_REPO: nuvla
       DOCKER_TAG: ${{ needs.trigger-release.outputs.tag_name }}
+      SNAPSHOT: false
     secrets: inherit
 
   notify:
