fix(ci): Clojure setup step needed

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,11 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
 
+      - name: Install clojure tools
+        uses: DeLaGuardo/setup-clojure@12.5
+        with:
+          lein: 2.11.2
+
       # Ubuntu Repos on Azure fail often. Attempt to install before other
       # long-running operations.
       # xmllinter for tests checks
