feat(Logging): Use telemere lib for logging and observability

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -15,7 +15,6 @@ LABEL ci.build.number=${CI_BUILD_NUMBER}
 LABEL ci.build.web.url=${CI_BUILD_WEB_URL}
 
 COPY target/dependency/lib /opt/nuvla/server/lib
-COPY src/scripts/log4j.properties /opt/nuvla/server/resources/
 COPY src/scripts/start.sh /opt/nuvla/server/bin/
 RUN chmod 0755 /opt/nuvla/server/bin/start.sh \
     && mkdir -p /opt/nuvla/server/lib.d/
@@ -26,6 +25,8 @@ RUN apk upgrade --update-cache --available && \
     rm -rf /var/cache/apk/*
 
 ENV NUVLA_SERVER_INIT=com.sixsq.nuvla.server.example/init
+ENV CLOJURE_TOOLS_LOGGING_TO_TELEMERE=true
+ENV TAOENSSO_TELEMERE_RT_MIN_LEVEL='{:default :info #_:slf4j   #_[["*" :debug] ["org.apache.zookeeper.*" :error]]}'
 
 EXPOSE 8200
 
