updated sonar configs

--- a/code/sonar-project.properties
+++ b/code/sonar-project.properties
@@ -2,6 +2,8 @@ sonar.organization=nuvla
 sonar.projectKey=nuvla-ring
 sonar.projectName=nuvla-ring
 sonar.sources=src,project.clj
+sonar.clojure.file.suffixes=.clj,.cljc
+sonar.lang.patterns.clj=**/*.clj,**/*.cljc
 sonar.tests=test
 sonar.clojure.eastwood.enabled=true
 sonar.clojure.kibit.enabled=true
